--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "awesome-typescript-loader": "^5.2.1",
     "axios": "^0.19.2",
     "babel-loader": "^8.0.6",
+    "bootstrap": "5.1.3",
     "bootstrap-scss": "4.4.1",
     "browserlist": "^1.0.1",
     "classnames": "^2.2.6",
