code for country

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "htmlparser2": "^6.1.0",
     "imagemin": "^7.0.1",
     "jquery": "^3.5.1",
+    "js-sha256": "^0.9.0",
     "jsesc": "^3.0.2",
     "koa": "^2.11.0",
     "koa-pug": "^4.0.3",
