--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/jquery": "^3.5.0",
     "@types/jsesc": "^3.0.0",
     "@types/koa": "^2.11.3",
+    "@types/koa-logger": "^3.1.2",
     "@types/lodash": "^4.14.157",
     "@types/newrelic": "^7.0.2",
     "@types/react": "^16.9.17",
@@ -71,6 +72,7 @@
     "js-sha256": "^0.9.0",
     "jsesc": "^3.0.2",
     "koa": "^2.11.0",
+    "koa-logger": "^3.2.1",
     "koa-pug": "^4.0.3",
     "koa-static": "^5.0.0",
     "lodash": "^4.17.15",
