--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "browserlist": "^1.0.1",
     "classnames": "^2.2.6",
     "connected-react-router": "^6.6.1",
+    "crypto-js": "^4.1.1",
     "css-loader": "^3.4.0",
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.17.0",
