--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/koa": "^2.11.3",
     "@types/koa-logger": "^3.1.2",
     "@types/lodash": "^4.14.157",
+    "@types/newrelic": "^9.4.0",
     "@types/react": "^16.9.17",
     "@types/react-autosuggest": "^9.3.13",
     "@types/react-datepicker": "^3.0.2",
@@ -78,6 +79,7 @@
     "lodash": "^4.17.15",
     "maker-enhance": "^0.0.4",
     "moment": "^2.25.3",
+    "newrelic": "^9.7.5",
     "node-cache": "^5.1.0",
     "node-sass": "^4.13.0",
     "prettier": "^1.19.1",
