--- a/package.json
+++ b/package.json
@@ -40,10 +40,11 @@
     "@types/koa": "^2.11.3",
     "@types/koa-logger": "^3.1.2",
     "@types/lodash": "^4.14.157",
+    "@types/node": "^18.11.18",
     "@types/react": "^16.9.17",
     "@types/react-autosuggest": "^9.3.13",
     "@types/react-datepicker": "^3.0.2",
-    "@types/react-dom": "^16.9.5",
+    "@types/react-dom": "^18.0.10",
     "@types/react-loadable": "^5.5.3",
     "@types/react-redux": "^7.1.7",
     "@types/react-router": "^5.1.3",
@@ -82,12 +83,12 @@
     "node-sass": "^4.13.0",
     "prettier": "^1.19.1",
     "rc-slider": "^9.2.4",
-    "react": "^16.12.0",
+    "react": "^18.2.0",
     "react-absolute-grid": "^3.0.1",
     "react-autosuggest": "^10.0.2",
     "react-circular-progressbar": "^2.0.3",
     "react-datepicker": "^3.1.3",
-    "react-dom": "^16.12.0",
+    "react-dom": "^18.2.0",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.1.21",
     "react-google-recaptcha": "^2.1.0",
